# TimeLog

./: .gitignore  CMakeLists.txt  README.md
documentation/: ClassDiagram.puml  PackSequenceDiagram.puml  UnPackSequenceDiagram.puml
include/: cli.hpp  compressor.hpp  manifest.hpp  packer.hpp  types.hpp  unpacker.hpp
src/: cli.cpp  compressor.cpp  main.cpp  manifest.cpp  packer.cpp  unpacker.cpp
